--- a/frontend/src/page/Products/product1/product1.module.css
+++ b/frontend/src/page/Products/product1/product1.module.css
@@ -10,7 +10,7 @@
     width: 100%;
     height: auto;
     object-fit: cover;
-    object-position: center;
+    object-position: center calc(100% - 70px);
 }
 
 .topic {
